Fix tests and add comment test

--- a/tests/releases.cfg
+++ b/tests/releases.cfg
@@ -12,6 +12,7 @@ Sources
   BoincDIRAC = git://github.com/DIRACGrid/BoincDIRAC.git
   OAuthDIRAC = git://github.com/DIRACGrid/OAuthDIRAC.git
 }
+# Here is where the releases go:
 Releases
 {
   integration
