--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
     name: Publish package to PyPI
     needs: [pytest, pycodestyle]
     steps:
+      - uses: actions/checkout@v2
       - name: Prepare environment
         run: .github/workflows/prepare_environment.sh ${{ matrix.python_version }}
       - name: Build distributions
