--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,10 +45,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Prepare environment
-        run: .github/workflows/prepare_environment.sh ${{ matrix.python_version }}
+        run: .github/workflows/prepare_environment.sh 3
       - name: Build distributions
         run: python setup.py sdist bdist_wheel --universal
-      - name: Publih package
+      - name: Publish package
         if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@master
         with:
