Convert the clone used for deploying releases to a full clone

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,8 @@ jobs:
     needs: [pytest, pycodestyle]
     steps:
       - uses: actions/checkout@v2
+      - run: |
+          git fetch --prune --unshallow
       - name: Prepare environment
         run: .github/workflows/prepare_environment.sh 3
       - name: Build distributions
