--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,9 @@ jobs:
       - name: Prepare environment
         run: .github/workflows/prepare_environment.sh 3
       - name: Build distributions
-        run: python setup.py sdist bdist_wheel --universal
+        run: |
+          . "${CONDA}/bin/activate" test-env
+          python setup.py sdist bdist_wheel --universal
       - name: Publish package
         if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@master
